--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <img style="height: 2.5rem" src="./assets/prizy.png" alt="Logo Prizy" />
         <img
           style="height: 2rem"
-          src="./assets/talentday.png"
+          src="./assets/logo-emploitic-blanc.png"
           alt="Logo talent day"
         />
       </div>
     </nav>
     <div class="container">
       <div class="cta-form">
-        <h2>TOMBOLA 100% Digitale by Prizy</h2>
-        <p>
+        <h2>Tirage au sort enquête Tendances RH 2024</h2>
+        <!--<p>
           En collaboration avec Emploitic, Talenteo et eTalent , nous organisons
           la TOMBOLA 100% DIGITALE pour le Talent Day… C'est parti pour le
           tirage au sort !🎉
-        </p>
+        </p>-->
       </div>
       <div class="formbold-main-wrapper">
         <div class="formbold-form-wrapper">
@@ -120,6 +120,8 @@
     </div>
 
     <div class="footer">
+
+      <!--
       <div class="sponsorsContainer">
         <h2
           class="formbold-drop-file"
@@ -134,6 +136,7 @@
           <img class="formlogo" src="./assets/etalent.png" alt="logo" />
         </div>
       </div>
+    -->
 
       <div class="copyrightscontainer">
         <p class="copyrights">© Prizy, 2023. Tous droits réservés.</p>
@@ -145,11 +148,13 @@
         return Math.floor(Math.random() * (end - start + 1) + start);
       }
 
+      /*
       const prizes = [
         "https://drive.google.com/file/d/1mM_-vKM4CZgxpOg53VjJ_RLQVzhI23v8/view?usp=sharing",
         "https://drive.google.com/file/d/1AmZFiYE77FG-9xXoRMQL-j0Cn_pjkSMI/view?usp=sharing",
         "https://drive.google.com/file/d/1gxsT2wtauZWYcbRoAd1vqbs--xJNSdp7/view?usp=sharing",
       ];
+      */
 
       const form = document.getElementById("form");
       const file = document.getElementById("file");
@@ -230,8 +235,8 @@
               winnerElementContent.append(winnerSpan);
 
               for (
-                var cellindex = Math.min(rows[winnerindex].length, 1);
-                cellindex < Math.min(rows[winnerindex].length, 3);
+                var cellindex = Math.min(rows[winnerindex].length, 49);
+                cellindex < Math.min(rows[winnerindex].length, 50);
                 cellindex++
               ) {
                 var winnerSpan = document.createElement("span");
@@ -240,6 +245,7 @@
                 winnerElementContent.append(winnerSpan);
               }
 
+              /*
               winnerSpan = document.createElement("span");
               winnerSpan.className = "formbold-file-name";
               console.log(prizes[cpt - 1]);
@@ -247,6 +253,7 @@
                 cpt <= 3 ? prizes[cpt - 1] : prizes[2]
               } target="_blank"> Click pour voir la récompense ! <i class='fas fa-angle-double-right'></a><br/>`;
               winnerElementContent.append(winnerSpan);
+              */
 
               cpt = cpt + 1;
               resultdiv.append(winnerElementWrapper);
