--- a/index.html
+++ b/index.html
@@ -22,20 +22,19 @@
       <div class="navcontainer">
         <img style="height: 2.5rem" src="./assets/prizy.png" alt="Logo Prizy" />
         <img
-          style="height: 2rem"
-          src="./assets/logo-emploitic-blanc.png"
+          style="height: 3rem"
+          src="./assets/siphal.png"
           alt="Logo talent day"
         />
       </div>
     </nav>
     <div class="container">
       <div class="cta-form">
-        <h2>Tirage au sort enquête Tendances RH 2024</h2>
-        <!--<p>
-          En collaboration avec Emploitic, Talenteo et eTalent , nous organisons
-          la TOMBOLA 100% DIGITALE pour le Talent Day… C'est parti pour le
-          tirage au sort !🎉
-        </p>-->
+        <h2>TOMBOLA 100% Digitale by Prizy</h2>
+        <p>
+          Pour le SIPHAL 2024, Prizy organise la TOMBOLA 100% DIGITALE... C'est
+          parti pour le tirage au sorti ! 🎉
+        </p>
       </div>
       <div class="formbold-main-wrapper">
         <div class="formbold-form-wrapper">
@@ -120,7 +119,6 @@
     </div>
 
     <div class="footer">
-
       <!--
       <div class="sponsorsContainer">
         <h2
@@ -139,7 +137,7 @@
     -->
 
       <div class="copyrightscontainer">
-        <p class="copyrights">© Prizy, 2023. Tous droits réservés.</p>
+        <p class="copyrights">© Prizy, 2024. Tous droits réservés.</p>
       </div>
     </div>
 
@@ -148,13 +146,11 @@
         return Math.floor(Math.random() * (end - start + 1) + start);
       }
 
-      /*
       const prizes = [
         "https://drive.google.com/file/d/1mM_-vKM4CZgxpOg53VjJ_RLQVzhI23v8/view?usp=sharing",
         "https://drive.google.com/file/d/1AmZFiYE77FG-9xXoRMQL-j0Cn_pjkSMI/view?usp=sharing",
         "https://drive.google.com/file/d/1gxsT2wtauZWYcbRoAd1vqbs--xJNSdp7/view?usp=sharing",
       ];
-      */
 
       const form = document.getElementById("form");
       const file = document.getElementById("file");
@@ -235,8 +231,8 @@
               winnerElementContent.append(winnerSpan);
 
               for (
-                var cellindex = Math.min(rows[winnerindex].length, 49);
-                cellindex < Math.min(rows[winnerindex].length, 50);
+                var cellindex = Math.min(rows[winnerindex].length, 1);
+                cellindex < Math.min(rows[winnerindex].length, 3);
                 cellindex++
               ) {
                 var winnerSpan = document.createElement("span");
@@ -248,7 +244,7 @@
               /*
               winnerSpan = document.createElement("span");
               winnerSpan.className = "formbold-file-name";
-              console.log(prizes[cpt - 1]);
+              //console.log(prizes[cpt - 1]);
               winnerSpan.innerHTML = `<br/><a href=${
                 cpt <= 3 ? prizes[cpt - 1] : prizes[2]
               } target="_blank"> Click pour voir la récompense ! <i class='fas fa-angle-double-right'></a><br/>`;
